--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/hex/"
 repository = "https://github.com/KokaKiwi/rust-hex"
 edition = "2018"
+exclude = ["/sgx/*"]
 
 [features]
-default = ["std"]
-std = []
+default = ["std", "mesalock_sgx"]
+std = ["mesalock_sgx"]
+mesalock_sgx = ["std", "sgx_tstd"]
 
 [[bench]]
 name = "hex"
@@ -20,3 +22,6 @@ harness = false
 criterion = "0.2"
 rustc-hex = "2.0"
 faster-hex = "0.3"
+
+[dependencies]
+sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
