--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,34 +7,24 @@ license = "MIT OR Apache-2.0"
 documentation = "https://docs.rs/hex/"
 repository = "https://github.com/KokaKiwi/rust-hex"
 edition = "2018"
-readme = "README.md"
-keywords = ["no_std", "hex"]
-categories = ["encoding", "no-std"]
-
-[badges]
-maintenance = { status = "actively-developed" }
+exclude = ["/sgx/*"]
 
 [features]
-default = ["std"]
-alloc = []
-std = ["alloc"]
+default = ["std", "mesalock_sgx"]
+std = ["mesalock_sgx"]
+mesalock_sgx = ["std", "sgx_tstd"]
 
 [[bench]]
 name = "hex"
 harness = false
 
 [dependencies]
-serde = { version = "1.0", default-features = false, optional = true }
+serde = { git = "https://github.com/yunuseozer/serde-sgx.git", default-features = false, optional = true }
 
 [dev-dependencies]
-criterion = "0.3"
-rustc-hex = "2.1"
-faster-hex = "0.5"
-version-sync = "0.9"
-pretty_assertions = "0.6"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+#criterion = "0.2"
+#rustc-hex = "2.0"
+#faster-hex = "0.3"
 
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
+[dependencies]
+sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
